JS updated to reflect current price of items in CID

--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
             </div>   
             <div id="register">
                 <div id="price-container">
-                    <p id="price">Total: $3.26</p>
+                    <p id="price"></p>
                 </div> 
                <div id="register-arm"></div>
                 <div id="register-body">
                     <div id="register-change">
                         <ol id="change-list-header">Change in drawer:
-                            <li class="change-item">Pennies: $1.01</li>
+                            <li class="change-item">Pennies:<span class="change-amount"></span></li>
+                            <li class="change-item">Nickels:<span class="change-amount"></span></li>
+                            <li class="change-item">Dimes:<span class="change-amount"></span></li>
+                            <li class="change-item">Quarters:<span class="change-amount"></span></li>
+                            <li class="change-item">Ones:<span class="change-amount"></span></li>
+                            <li class="change-item">Fives:<span class="change-amount"></span></li>
+                            <li class="change-item">Tens:<span class="change-amount"></span></li>
+                            <li class="change-item">Twenties:<span class="change-amount"></span></li>
+                            <li class="change-item">Hundreds:<span class="change-amount"></span></li>
                         </ol>
                     </div> 
                     <div id="register-black-squares-container">
@@ -47,6 +55,7 @@
                 </div>
                 
             </div>
+            <button id="test" type="button">Test button</button>
         </main>
         <script src="script.js"></script>
     </body>
