--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <body>
         <main id="main">
             <h1 id="main-header">Cash Register Project</h1>
-            <div id="change-due">
-                
-            </div>
+            <div id="change-due"></div>
             <div id="input-container">
                 <label id="input-label" for="user-input">Enter cash from customer:</label>
                 <input type="number" id="cash">
@@ -53,7 +51,6 @@
                     <div id="drawer-knob"></div>
                 </div>
                 </div>
-                
             </div>
             <button id="test" type="button">Test button</button>
         </main>
