changes made to exactChange present and to deepCidCopy array. also moved where exactchange is called

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 </div>
             </div>
-            <button id="test" type="button">Test button</button>
+            <!-- <button id="test" type="button">Test button</button> -->
         </main>
         <script src="script.js"></script>
     </body>
